codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Выполняю (0s • esc to interr…
                              
                              
› Спросите Lavilas Codex о чём угодно    
                              
           100% контекста осталось
