codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Выполняю (0s • esc чтобы прервать)               
                                                
                                                
› Спросите Lavilas Codex о чём угодно                      
                                                
  ? подсказки            100% контекста осталось
